Fix#2 blurred font

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,7 +16,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'PT Sans';
 }
 
 html {
